# back-burn

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  openapi.json  pyproject.toml
.claude/: orchestration-patterns.md
.claude/agents/: ai-integration-engineer.md  api-designer.md  code-reviewer.md  database-architect.md  powerbuilding-trainer.md  python-backend-engineer.md  python-test-engineer.md  sprint-manager.md
.claude/archive/agents/: api-engineer.md
docs/: 00_project_brief.md  01_database.md  02_api_documentation.md
docs/api/: plans_endpoints.md
docs/api/examples/: get_plan_by_id.md
docs/planning/: dependencies_map.md  sprint_03_task_01_summary.md  sprint_summary.md
docs/planning/archive/: sprint_02_2025-01-27.md
docs/planning/sprints/: sprint_02_2025-01-27.md  sprint_03_2025-02-03.md  sprint_04_2025-02-10.md  sprint_04_changes_summary.md
scripts/: dev-setup.sh  dev.sh  generate_openapi.py  publish_openapi.py  test_auth.py  verify_openapi.py
src/api/endpoints/: __init__.py  auth.py  plans.py  workouts.py
src/core/: README.md  __init__.py  di.py  settings.py  utils.py
src/core/auth/: __init__.py  dependencies.py  errors.py  jwt_bearer.py  models.py
src/models/: __init__.py  common.py  enums.py  plan.py  workout.py
src/repositories/: plans.py  workouts.py
src/services/: workout_metrics.py
supabase/: config.toml
supabase/migrations/: 20250730031258_enable_extensions.sql  20250730031322_create_core_tables.sql  20250730031338_create_core_indexes_functions_triggers.sql  20250730031345_create_core_rls_policies.sql  20250803193320_initial_schema.sql  20250803193624_rls_policies.sql  20250803211937_add_auth_trigger.sql  20250803220000_add_training_style_to_plans.sql  20250804000000_add_deleted_at_to_plans.sql
supabase/schemas/: 00_extensions.sql  10_movement_patterns.sql  11_muscle_groups.sql  12_equipment_types.sql  13_training_styles.sql  20_profiles.sql  30_exercises.sql  31_exercise_movement_patterns.sql  32_exercise_muscles.sql  33_exercise_training_styles.sql  34_exercise_relationships.sql  40_plans.sql  41_plan_exercises.sql  50_workout_sessions.sql  51_sets.sql  60_conversations.sql  61_memories.sql  90_shared_functions.sql  91_shared_triggers.sql
supabase/seeds/: 01_reference_seed.sql  02_exercise_seed.sql
tests/: conftest.py  test_main.py  test_plan_models.py  test_plans.py  test_plans_api.py  test_workout_metrics_service.py  test_workout_plan_integration.py  test_workouts_endpoints.py  test_workouts_repository.py
tests/auth/: __init__.py  test_dependencies.py  test_errors.py  test_integration.py  test_jwt_bearer.py
tests/plans/: test_delete.py  test_edge_cases.py  test_get.py  test_post.py  test_put.py
